<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/enterUserBudgetRoot"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/white"
    android:layout_margin="50dp">

    <EditText
        android:id="@+id/profileTitleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/profile_title"
        android:layout_marginBottom="5dp"
        android:inputType="text"
        android:importantForAutofill="no"/>

    <EditText
        android:id="@+id/bankSourceText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:hint="@string/bank_source"
        android:layout_marginTop="5dp"
        android:inputType="text"
        android:importantForAutofill="no" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/selectDateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_date"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"/>

    <EditText
        android:id="@+id/userBudgetText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:hint="@string/budget"
        android:layout_marginTop="5dp"
        android:inputType="numberDecimal"
        android:text="@string/_0_00"
        android:importantForAutofill="no" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/addProfileButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_budget_profile"
        android:layout_marginTop="5dp"/>

</LinearLayout>