<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootContainer"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/white"
    android:layout_margin="50dp">

    <EditText
        android:id="@+id/descriptionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:layout_marginBottom="5dp"
        android:inputType="text"
        android:importantForAutofill="no"/>

    <EditText
        android:id="@+id/userAmountText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:hint="@string/amount"
        android:layout_marginTop="5dp"
        android:inputType="numberDecimal"
        android:text="@string/_0_00"
        android:importantForAutofill="no" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/addAmountButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_amount"
        android:layout_marginTop="5dp"/>

</LinearLayout>