<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".BudgetProfileActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">

            <TextView
                android:id="@+id/budgetText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:padding="17dp"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textSize="17sp"
                android:textStyle="bold"
                android:background="@color/teal_700"/>

            <TextView
                android:id="@+id/totalSpendText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:padding="17dp"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textSize="17sp"
                android:textStyle="bold"
                android:background="@color/red"/>

            <TextView
                android:id="@+id/savingsText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:padding="17dp"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textSize="17sp"
                android:textStyle="bold"
                android:background="@color/green"/>

            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/pieChart"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"/>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/addExpensesButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/add_icon"
                app:tint="@color/white"
                android:contentDescription="@string/add_budget_icon"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/expenses"
                android:textColor="@color/red"
                android:textAlignment="center"
                android:textSize="17sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/deselectTextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/deselect"
                android:textColor="#101D6B"
                android:textAlignment="textEnd"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="10dp"
                android:visibility="gone"
                android:padding="8dp"
                android:clickable="true"
                android:focusable="true"
                android:background="?android:attr/selectableItemBackground"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/expensesRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"/>

            <LinearLayout
                android:id="@+id/buttonsLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="12dp"
                android:visibility="gone">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/selectButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select"
                    android:layout_weight="1"
                    android:layout_marginEnd="5dp"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/withdrawButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/withdraw"
                    android:layout_weight="1"
                    android:layout_marginStart="5dp"/>

            </LinearLayout>

            <TextView
                android:id="@+id/toMyAccountText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/to_my_account"
                android:textColor="@color/red"
                android:textAlignment="center"
                android:textSize="17sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:visibility="gone"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/toMyBankRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp" />

            <TextView
                android:id="@+id/totalMyAccountAmountText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textAlignment="textEnd"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_marginTop="3dp"
                android:visibility="gone"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/text_view_background"/>

            <TextView
                android:id="@+id/withdrawText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/amounts_to_be_withdrawn"
                android:textColor="@color/red"
                android:textAlignment="center"
                android:textSize="17sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:visibility="gone" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/withdrawRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp" />

            <TextView
                android:id="@+id/totalWithdrawAmountText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textAlignment="textEnd"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:visibility="gone"
                android:background="@drawable/text_view_background"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>